Changed to swedish app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Puns_Riddles</string>
+    <string name="app_name">Gåtor &amp; Ordvitsar</string>
     <string name="Riddles">Gåtor</string>
     <string name="Puns">Vitsar</string>
 </resources>
